--- a/styles/style.css
+++ b/styles/style.css
@@ -1,73 +1,77 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
-    position: relative;
-    display: flex;
-    min-width: 800px;
+  position: relative;
+  display: flex;
+  min-width: 800px;
+  height: 100%;
 }
 
 body::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    z-index: 1;
-    background-color: rgb(255 255 255 / 0.3);
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgb(255 255 255 / 0.3);
 }
 
 .title {
-    z-index: 1;
-    font-family: Raleway, sans-serif;
-    max-width: 739px;
-    font-weight: 800;
-    font-size: 116px;
-    margin: 0 auto auto auto;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 3.5%;
+  padding-top: 60px;
+  z-index: 1;
+  max-width: 739px;
+  margin: 0 auto auto auto;
+  font-family: Raleway, sans-serif;
+  font-weight: 800;
+  font-size: 116px;
+  letter-spacing: 0.035em;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-
 .title::after {
-    content: "*";
+  content: "*";
+  position: relative;
 }
 
 .title:hover::before {
-    content: "На самом деле нет.\AВажнее &mdash; научиться ошибаться.";
-    white-space: pre;
-    font-family: Raleway, sans-serif;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 1;
-    background-color: #fff;
-    border: 2px solid black;
-    border-radius: 20px;
-    padding: 36px 44px;
-    position: absolute;
-    top: 180px;
-    right: 20px;
-    text-align: left;
-    color: #000;
+  content: "На самом деле нет.\AВажнее &mdash; научиться ошибаться.";
+  position: absolute;
+  top: 180px;
+  right: 20px;
+  border: 2px solid black;
+  border-radius: 20px;
+  box-shadow: 0 12px 0 #000;
+  padding: 36px 44px;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 1;
+  text-align: left;
+  text-transform: initial;
+  background-color: #fff;
+  white-space: pre;
 }
 
 .title:hover {
-    color: #4c4c4c;
+  color: #4c4c4c;
+  cursor: default;
 }
 
 .video {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
