--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ body::before {
   font-weight: 400;
   font-size: 35px;
   line-height: 1;
+  letter-spacing: normal;
   text-align: left;
   text-transform: initial;
   background-color: #fff;
